--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                         </div>
                         <div class="bloco-works">
                             <div class="hidden">
-                                <img class="img-works" src="https://i.postimg.cc/0jhM0jfT/IMG-6061.jpg" width="500"/>
+                                <img class="img-works" src="https://img.xatblog.net/image/EMAwxcOTJT.png" width="500"/>
                                 <div class="infor">
                                     <img src="https://img.xatblog.net/image/EMAwxcOTJT.png" width="100"/>
                                     <h5>Will</h5>
