--- a/index.html
+++ b/index.html
@@ -196,9 +196,9 @@
                         </div>
                                                                                                             <div class="bloco-works">
                             <div class="hidden">
-                                <img class="img-works" src="https://i.postimg.cc/gk1q0P9z/20200726-074623.jpg" width="500"/>
+                                <img class="img-works" src="https://i.imgur.com/PvqDNXI.jpeg" width="500"/>
                                 <div class="infor">
-                                    <img src="https://i.postimg.cc/gk1q0P9z/20200726-074623.jpg" width="100"/>
+                                    <img src="https://i.imgur.com/PvqDNXI.jpeg" width="100"/>
                                     <h5>Will</h5>
                                     
                                 </div>
