--- a/index.html
+++ b/index.html
@@ -206,9 +206,9 @@
                         </div>
                         <div class="bloco-works">
                             <div class="hidden">
-                                <img class="img-works" src="https://img.xatblog.net/image/EMAwxcOTJT.png" width="500"/>
+                                <img class="img-works" src="https://img.xatblog.net/image/33hBgfR31v.jpg" width="500"/>
                                 <div class="infor">
-                                    <img src="https://img.xatblog.net/image/EMAwxcOTJT.png" width="100"/>
+                                    <img src="https://img.xatblog.net/image/33hBgfR31v.jpg" width="100"/>
                                     <h5>Will</h5>
                             
                                    
