--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                             <div class="hidden">
                                 <img class="img-works" src="https://i.postimg.cc/sD7WsFn3/IMG-4842.jpg" width="500"/>
                                 <div class="infor">
-                                    <img src="https://i.postimg.cc/sD7WsFn3/IMG-4842.jpg" width="100"/>
+                                    <img src="https://xatimg.com/image/gQfn87POd7xe.gif" width="100"/>
                                     <h5>Will</h5>
                                    
                                 </div>
