--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
         <div id="nav">
             <a class="btn-nav" id="color-1" href="#content-1">
-                <img class="icone" src="https://i.postimg.cc/8cXWM7Tr/15705-200-removebg-preview.png" width="68"/>
+                <img class="icone" src="https://xatimg.com/image/gQfn87POd7xe.gif" width="68"/>
                 <span>music</span>
             </a>
             <a class="btn-nav" id="color-2" href="#content-2">
