--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div id="content-6">
         <div id="user">
             <div class="sfere">
-                <h1 class="title">𝓦𝓲𝓵𝓵𝓲𝓪𝓷</h1>
+                <h1 class="title">Rek</h1>
                 <img class="img-user" src="https://i.postimg.cc/sD7WsFn3/IMG-4842.jpg" width="150"/>
             </div>
             <span class="welcome">Welcome to my xatspace!</span>
