--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div id="user">
             <div class="sfere">
                 <h1 class="title">Rek</h1>
-                <img class="img-user" src="https://i.postimg.cc/sD7WsFn3/IMG-4842.jpg" width="150"/>
+                <img class="img-user" src="https://xatimg.com/image/gQfn87POd7xe.gif" width="150"/>
             </div>
             <span class="welcome">Welcome to my xatspace!</span>
             <span class="slug">Personal xat me</span>
